2000-11-10  Lars Wirzenius  <liw@iki.fi>

	* gw/wap-appl.c: Reformatted.

2000-11-10  Lars Wirzenius  <liw@iki.fi>

	* gw/wap-appl.c: Changed thread structure so that there is a
	static number of thread regardless of how many requests are
	made. This should make things a bit faster when the load is heavy.
	
	* gwlib/http.[ch]: Wrote function http_client_signal_shutdown,
	to allow the wapbox to shutdown.

2000-11-10  Lars Wirzenius  <liw@iki.fi>

	* gw/wap-appl.c: Rearranged code in preparation for changing
	the thread structure so that a new thread is not started for
	each request.

2000-11-10  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.[ch]: Updated documentation, moved HTTP_PORT to .c,
	since no-one else needs to know it.

2000-11-09  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: encode 7 bit messages in the default GSM alphabet
	(thanks to Mike Gaertner).

2000-11-08  Richard Braakman  <dark@wapi.com>

	* gw/wap-appl.c: Deal with client_SDU_size being 0, which means
	there is no limit.  Thanks to Ruud Schramp for pointing this out.
	Also made connectionless mode set it to 0 instead of an arbitrary
	value.

2000-11-08  Lars Wirzenius  <liw@iki.fi>

	* Makefile.in, configure.in: Made "make install" work in a more
	sensible way, at least as far as the Filesystem Hierarchy Standard
	(pretty much all Linux systems, and mostly BSD systems as well)
	is concerned. /usr/bin and /usr/sbin are now used properly,
	and manual pages are installed as well. Also, the User Guide is
	installed in a more sensible way.
	
	* debian/rules: Updated accordingly.
	
2000-11-08  Lars Wirzenius  <liw@iki.fi>

	* checks/check_sendsms.sh: Remove log files if check was
	successful.

2000-11-08  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_boxc.c: fixed error that caused bearerbox to possibly
	segfault when connection from illegal IP was tried

	* gw/smsbox_req.c: make sure that UDH length is set properly
	
2000-11-07  Lars Wirzenius  <liw@iki.fi>
